--- a/tests/markers.html
+++ b/tests/markers.html
@@ -47,143 +47,49 @@
   <script src="assets/jquery-jvectormap-us-aea-en.js"></script>
   <script>
     $(function(){
-      var markers = [
-            [61.18, -149.53],
-            [21.18, -157.49],
-            {latLng: [40.66, -73.56], name: 'New York City', style: {r: 8, fill: 'yellow'}},
-            {latLng: [41.52, -87.37], style: {fill: 'red', r: 10}}
-          ],
-          values1 = [1, 2, 3, 4],
-          values2 = [1, 2, 3, 4];
-
-      var map = new jvm.WorldMap({
-        container: $('.map'),
-        map: 'us_aea_en',
-        markers: markers,
-        series: {
-          markers: [{
-            attribute: 'fill',
-            scale: ['#C8EEFF', '#0071A4'],
-            normalizeFunction: 'polynomial',
-            values: values1
-          },{
-            attribute: 'r',
-            scale: [5, 20],
-            normalizeFunction: 'polynomial',
-            values: values2
-          }],
-          regions: [{
-            scale: {
-              red: '#ff0000',
-              blue: '#00ff00'
-            },
-            attribute: 'fill',
-            normalizeFunction: 'polynomial',
-            values: {
-              "US-KS": 'red',
-              "US-MO": 'red',
-              "US-IA": 'blue',
-              "US-NE": 'blue'
-            }
-          },{
-            values: {
-              "US-NY": 'blue',
-              "US-FL": 'blue'
-            },
-            attribute: 'fill'
-          }]
-        },
-        regionsSelectable: true,
-        markersSelectable: true,
-        markersSelectableOne: true,
-        selectedRegions: JSON.parse( window.localStorage.getItem('jvectormap-selected-regions') || '[]' ),
-        selectedMarkers: JSON.parse( window.localStorage.getItem('jvectormap-selected-markers') || '[]' ),
-
-        onMarkerLabelShow: function(event, label, index){
-          label.html(label.html()+' (modified marker)');
-        },
-        onMarkerOver: function(event, index){
-          console.log('marker-over', index);
-        },
-        onMarkerOut: function(event, index){
-          console.log('marker-out', index);
-        },
-        onMarkerClick: function(event, index){
-          console.log('marker-click', index);
-        },
-        onMarkerSelected: function(event, index, isSelected, selectedMarkers){
-          console.log('marker-select', index, isSelected, selectedMarkers);
-          if (window.localStorage) {
-            window.localStorage.setItem(
-              'jvectormap-selected-markers',
-              JSON.stringify(selectedMarkers)
-            );
-          }
-        },
-
-        onRegionLabelShow: function(event, label, code){
-          label.html(label.html()+' (modified)');
-        },
-        onRegionOver: function(event, code){
-          console.log('region-over', code, map.getRegionName(code));
-        },
-        onRegionOut: function(event, code){
-          console.log('region-out', code);
-        },
-        onRegionClick: function(event, code){
-          console.log('region-click', code);
-        },
-        onRegionSelected: function(event, code, isSelected, selectedRegions){
-          console.log('region-select', code, isSelected, selectedRegions);
-          if (window.localStorage) {
-            window.localStorage.setItem(
-              'jvectormap-selected-regions',
-              JSON.stringify(selectedRegions)
-            );
-          }
-        },
-        onZoom: function(e, scale){
-            console.log('viewportChange', scale);
-        }
-      });
-
-      $('.list-markers :checkbox').change(function(){
-        var index = $(this).closest('li').attr('data-marker-index');
-
-        if ($(this).prop('checked')) {
-          map.addMarker( index, markers[index], [values1[index], values2[index]] );
-        } else {
-          map.removeMarkers( [index] );
-        }
-      });
-      $('.button-add-all').click(function(){
-        $('.list-markers :checkbox').prop('checked', true);
-        map.addMarkers(markers, [values1, values2]);
-      });
-      $('.button-remove-all').click(function(){
-        $('.list-markers :checkbox').prop('checked', false);
-        map.removeAllMarkers();
-      });
-      $('.button-clear-selected-regions').click(function(){
-        map.clearSelectedRegions();
-      });
-      $('.button-clear-selected-markers').click(function(){
-        map.clearSelectedMarkers();
-      });
-      $('.button-remove-map').click(function(){
-        map.remove();
-      });
-      $('.button-change-values').click(function(){
-        map.series.regions[1].clear();
-        map.series.regions[1].setValues({
-          "US-TX": "black",
-          "US-CA": "black"
-        });
-      });
-      $('.button-reset-map').click(function(){
-        map.reset();
-      });
-    });
+  $('#world-map-markers').vectorMap({
+    map: 'world_mill_en',
+    scaleColors: ['#C8EEFF', '#0071A4'],
+    normalizeFunction: 'polynomial',
+    hoverOpacity: 0.7,
+    hoverColor: false,
+    markerStyle: {
+      initial: {
+        fill: '#F8E23B',
+        stroke: '#383f47'
+      }
+    },
+    backgroundColor: '#383f47',
+    markers: [
+      {latLng: [41.90, 12.45], name: 'Vatican City'},
+      {latLng: [43.73, 7.41], name: 'Monaco'},
+      {latLng: [-0.52, 166.93], name: 'Nauru'},
+      {latLng: [-8.51, 179.21], name: 'Tuvalu'},
+      {latLng: [43.93, 12.46], name: 'San Marino'},
+      {latLng: [47.14, 9.52], name: 'Liechtenstein'},
+      {latLng: [7.11, 171.06], name: 'Marshall Islands'},
+      {latLng: [17.3, -62.73], name: 'Saint Kitts and Nevis'},
+      {latLng: [3.2, 73.22], name: 'Maldives'},
+      {latLng: [35.88, 14.5], name: 'Malta'},
+      {latLng: [12.05, -61.75], name: 'Grenada'},
+      {latLng: [13.16, -61.23], name: 'Saint Vincent and the Grenadines'},
+      {latLng: [13.16, -59.55], name: 'Barbados'},
+      {latLng: [17.11, -61.85], name: 'Antigua and Barbuda'},
+      {latLng: [-4.61, 55.45], name: 'Seychelles'},
+      {latLng: [7.35, 134.46], name: 'Palau'},
+      {latLng: [42.5, 1.51], name: 'Andorra'},
+      {latLng: [14.01, -60.98], name: 'Saint Lucia'},
+      {latLng: [6.91, 158.18], name: 'Federated States of Micronesia'},
+      {latLng: [1.3, 103.8], name: 'Singapore'},
+      {latLng: [1.46, 173.03], name: 'Kiribati'},
+      {latLng: [-21.13, -175.2], name: 'Tonga'},
+      {latLng: [15.3, -61.38], name: 'Dominica'},
+      {latLng: [-20.2, 57.5], name: 'Mauritius'},
+      {latLng: [26.02, 50.55], name: 'Bahrain'},
+      {latLng: [0.33, 6.73], name: 'São Tomé and Príncipe'}
+    ]
+  });
+});
   </script>
 </head>
 <body>
